# mpv-history-daemon

./: .gitignore  LICENSE  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
mpv_history_daemon/: __main__.py  daemon.py  events.py  merge.py  serialize.py  utils.py
