[metadata]
name = mpv_history_daemon
version = 0.2.5
description = Daemon which connects to active mpv instances, saving a history of what I watch/listen to
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanbreckenridge/mpv_history_daemon
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    click>=8.1
    logzero
    python-mpv-jsonipc
    simplejson
python_requires = >=3.8
include_package_data = True
scripts =
    bin/mpv_history_daemon_restart

[options.packages.find]
include =
    mpv_history_daemon

[options.entry_points]
console_scripts =
    mpv-history-daemon = mpv_history_daemon.__main__:cli

[options.extras_require]
optional =
    orjson
testing =
    flake8
    mypy

[options.package_data]
mpv_history_daemon = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
disallow_any_generics = False
show_error_context = True
show_error_codes = True
namespace_packages = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
check_untyped_defs = True
disallow_untyped_calls = True
